# filedups

./: .gitignore  LICENSE.txt  NOTES.md  README.md  VERSION  pyproject.toml
src/: __main__.py  classes.py  main.py  perf_test_main.py  util.py
src-python/: blob (copy 1).py  blob (copy 2).py  blob (copy 3).py  classes.py  common_types.py  constants.py  grouper_funs.py  in-dirs.txt  main (copy 1).py  main-perf test.py  main.py  tmppy.py  types.py  user_types.py  util.py
src/filedups/: __main__.py  argparser_custom.py  classes.py  common_types.py  constants.py  csv_io.py  filedups.py  filedups_api.py  grouper_funs.py  in-dirs.txt  main.py  main_gui.py  perf_test_main.py  util.py
