[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filedups"
version = "1.0.0"
authors = [
  { name="Armağan Salmanr", email="armagansalman+pip@gmail.com" },
]
description = "Local file duplicate finder."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/armagansalman/filedups"
